--- a/style.css
+++ b/style.css
@@ -98,3 +98,19 @@ h3{
     height: 10rem;
     
 } */
+ul
+{
+    margin-bottom: 0;
+}
+.link {
+    font-size: 0.5rem;
+}
+
+
+@media screen and (min-width: 768px)
+{
+    .link
+    {
+        font-size: 1.2rem;
+    }
+}
